GameView - Threads adapted